# HIGH-PERFORMANCE-AD-BIDDING-ENGINE

./: .gitignore  NETLIFY_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  netlify.toml
.github/workflows/: ci.yml
api-gateway/: Dockerfile  knexfile.js  package-lock.json  package.json
api-gateway/proto/: bid.proto
api-gateway/src/: index.js
api-gateway/src/api/middleware/: auth.js  errorHandler.js
api-gateway/src/api/routes/: auth.js  bids.js  campaigns.js  metrics.js
api-gateway/src/cache/: redis.js
api-gateway/src/cpp-client/: client.js
api-gateway/src/database/: connection.js
api-gateway/src/database/migrations/: 001_initial_schema.js
api-gateway/src/jobs/: queue.js
api-gateway/src/monitoring/: logger.js  metrics.js
api-gateway/src/websocket/: server.js
bidding_engine/: CMakeLists.txt  Dockerfile  build.sh
bidding_engine/config/: config.yaml
bidding_engine/include/: auction.h  bid_handler.h  metrics.h  tcp_server.h
bidding_engine/include/data_structures/: bid_cache.h  circuit_breaker.h  memory_pool.h
bidding_engine/proto/: bid.proto
bidding_engine/src/: auction.cpp  bid_handler.cpp  main.cpp  metrics.cpp  tcp_server.cpp
bidding_engine/src/data_structures/: bid_cache.cpp  circuit_breaker.cpp  lockfree_queue.cpp  lockfree_queue.h  memory_pool.cpp
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/layout/: Sidebar.jsx  TopBar.jsx
frontend/src/components/ui/: GlassCard.jsx  MetricCard.jsx
frontend/src/hooks/: useSocket.js
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  Register.jsx
frontend/src/store/: authStore.js
frontend/src/tabs/: Analytics.jsx  Architecture.jsx  Campaigns.jsx  LiveBidding.jsx  Overview.jsx  Settings.jsx
frontend/src/utils/: api.js
nginx/: nginx.conf
prometheus/: prometheus.yml
